# VIAI

./: .gitignore  .pre-commit-config.yaml  README.md  Unreal Engine.lnk  architecture.md  design.md  generate.py  pyproject.toml  requirements.txt  test.cpp  vs2022_env.bat  借款合同.docx
.github/workflows/: ci.yml
VIAI/: .gitignore  README.md
VIAI/docs/: architecture.md  dependencies.md  setup_guide.md
VIAI/include/v8_core/: inference_engine.h  plugin_interface.h  plugin_manager.h
VIAI/include/viai_core/: memory_pool.h
VIAI/src/: main.cpp
VIAI/src/core/: inference_engine.cpp  memory_pool.cpp  plugin_manager.cpp
VIAI/tests/: test_plugin_manager.cpp
agents/: __init__.py  base.py  generation_agent.py  material_agent.py  requirement_agent.py
config/: default.yaml
core/: __init__.py  bge_embedding.py  config.py  embedding.py  llm.py
opencv_cpp_tutorial/: CMakeLists.txt  README.md  build_instructions.md  main.cpp  opencv_install_guide.md
opencv_cpp_tutorial/advanced_examples/: CMakeLists.txt  face_detection.cpp  feature_detection.cpp  image_filtering.cpp  video_processing.cpp
preprocessing/: __init__.py
preprocessing/chunking/: __init__.py  fixed_chunker.py  recursive_chunker.py  semantic_chunker.py
preprocessing/parsers/: __init__.py  base.py  pdf_parser.py  txt_parser.py
preprocessing/structure/: __init__.py  chapter_detector.py  tree_builder.py
retrieval/: __init__.py  context_assembler.py  fulltext_engine.py  hybrid_retriever.py  reranker.py  vector_store.py
scripts/: analyze_books.py  analyze_books_dataset.py  build_index.py  demo_knowledge_base.py  demo_llm_chunking.py  import_book.py
services/: book_service.py  generation_service.py
storage/: __init__.py  db.py  schema.sql
tests/: conftest.py  test_chunking.py  test_config.py  test_core.py  test_db.py  test_fulltext.py  test_imports.py  test_parsers.py  test_retrieval.py  test_services.py  test_structure.py  test_txt_parser.py
